--- a/nginx-multi-ports.conf
+++ b/nginx-multi-ports.conf
@@ -56,31 +56,31 @@ http {
   ## the above are stable, the below would be custom ##
   #####################################################
 
-  map $host $api_bizapp {
-    api.bizapp.bizsys.com.br 127.0.0.1:1337;
-    api.bizapp.bizsys.com.br:8001 127.0.0.1:8001;
+  map $host $app {
+    app.yourdomain.com 127.0.0.1:1337;
+    app.yourdomain.com:8001 127.0.0.1:8001;
   }
 
   # single SSL certificate for multiple domains
-  ssl_certificate /etc/letsencrypt/live/api.bizapp.bizsys.com.br/fullchain.pem;
-  ssl_certificate_key /etc/letsencrypt/live/api.bizapp.bizsys.com.br/privkey.pem;
-  ssl_trusted_certificate /etc/letsencrypt/live/api.bizapp.bizsys.com.br/fullchain.pem;
+  ssl_certificate /etc/letsencrypt/live/app.yourdomain.com/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/app.yourdomain.com/privkey.pem;
+  ssl_trusted_certificate /etc/letsencrypt/live/app.yourdomain.com/fullchain.pem;
 
  # https://github.com/strapi/strapi/issues/2424#issuecomment-445964719
   map $http_x_forwarded_host $custom_forwarded_host {
     default "$host";
-    bizapp "bizapp";
+    yourapp "yourapp";
   }
 
   server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
 
-    server_name api.bizapp.bizsys.com.br api.bizapp.bizsys.com.br:8001;
+    server_name app.yourdomain.com app.yourdomain.com:8001;
 
     # reverse proxy
     location / {
-      proxy_pass http://$api_bizapp$request_uri;
+      proxy_pass http://$app$request_uri;
       proxy_http_version  1.1;
       proxy_cache_bypass  $http_upgrade;
 
@@ -113,7 +113,7 @@ http {
     listen 80;
     listen [::]:80;
 
-    server_name api.bizapp.bizsys.com.br api.bizapp.bizsys.com.br:8001;
+    server_name app.yourdomain.com app.yourdomain.com:8001;
 
     # ACME-challenge
     location ^~ /.well-known/acme-challenge/ {
@@ -129,9 +129,9 @@ http {
   
   server {
     listen 1338 ssl http2;
-    ssl_certificate /etc/letsencrypt/live/api.bizapp.bizsys.com.br/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/api.bizapp.bizsys.com.br/privkey.pem;
-    ssl_trusted_certificate /etc/letsencrypt/live/api.bizapp.bizsys.com.br/fullchain.pem;
+    ssl_certificate /etc/letsencrypt/live/app.yourdomain.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/app.yourdomain.com/privkey.pem;
+    ssl_trusted_certificate /etc/letsencrypt/live/app.yourdomain.com/fullchain.pem;
     error_page 497 301 =307 https://$host:$server_port$request_uri;
 
     location / {
